--- a/GeantFast/CMakeLists.txt
+++ b/GeantFast/CMakeLists.txt
@@ -15,6 +15,6 @@ find_package(Pythia8)
 gaudi_add_library(GeantFast
                  src/*.cc
                  INCLUDE_DIRS GeantFast Geant4 HepMC CLHEP ROOT Pythia8
-                 LINK_LIBRARIES  Geant4 HepMC CLHEP ROOT Pythia8
+                 LINK_LIBRARIES  Geant4 GaudiKernel HepMC CLHEP ROOT Pythia8
                  PUBLIC_HEADERS GeantFast)
 
