Generators, Simulation structure udapted to FCCSW standards: Generators renamed to Generation, include directory created and called Generation (Simulation), header files moved to header directory, CMakeLists.txt files udapted accordingly. config directory created keeping all config, geometry files ...

--- a/Simulation/CMakeLists.txt
+++ b/Simulation/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(ROOT COMPONENTS Physics)
 
 gaudi_add_module(Simulation
                  src/*.cpp
-                 INCLUDE_DIRS Geant4 FWCore ROOT Delphes FCCEDM ALBERS
+                 INCLUDE_DIRS Simulation Geant4 FWCore ROOT Delphes FCCEDM ALBERS
                  LINK_LIBRARIES GaudiAlgLib DataObjects Geant4 GeantFast ROOT Delphes FCCEDM ALBERS)
 #                 LINK_LIBRARIES GaudiAlgLib DataObjects Geant4  Delphes)
 
