--- a/GeantSim/GeantFast/CMakeLists.txt
+++ b/GeantSim/GeantFast/CMakeLists.txt
@@ -7,16 +7,12 @@ gaudi_subdir(GeantFast v1r0)
 gaudi_depends_on_subdirs(GaudiAlg DataObjects GeantSim/GeantComponents)
 
 find_package(Geant4)
-find_package(HepMC)
-find_package(CLHEP)
 find_package(ROOT)
-find_package(FCCEDM)
-find_package(ALBERS)
 
 gaudi_install_headers(GeantFast)
 
 gaudi_add_library(GeantFast
                  src/*.cpp
-                 INCLUDE_DIRS GeantFast  FWCore GeantComponents Geant4 HepMC CLHEP ROOT FCCEDM ALBERS
-                 LINK_LIBRARIES GaudiAlgLib DataObjects Geant4 HepMC CLHEP ROOT FCCEDM ALBERS
+                 INCLUDE_DIRS GeantFast FWCore GeantComponents Geant4 ROOT
+                 LINK_LIBRARIES GaudiAlgLib DataObjects Geant4 ROOT 
                  PUBLIC_HEADERS GeantFast)
