Removing histograms from smearing tool

--- a/GeantSim/GeantComponents/CMakeLists.txt
+++ b/GeantSim/GeantComponents/CMakeLists.txt
@@ -7,11 +7,10 @@ gaudi_subdir(GeantComponents v1r0)
 gaudi_depends_on_subdirs(GaudiAlg)
 
 find_package(Geant4)
-find_package(ROOT)
 
 gaudi_install_headers(GeantComponents)
 
 gaudi_add_module(GeantComponents
                  src/*.cpp
-                 INCLUDE_DIRS ROOT Geant4
-                 LINK_LIBRARIES GaudiAlgLib ROOT Geant4)
+                 INCLUDE_DIRS Geant4
+                 LINK_LIBRARIES GaudiAlgLib Geant4)
