start moving Geant code into new structure

--- a/GeantSim/GeantConfig/CMakeLists.txt
+++ b/GeantSim/GeantConfig/CMakeLists.txt
@@ -4,7 +4,7 @@
 gaudi_subdir(GeantConfig v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg GeantSim/GeantGeneral GeantSim/GeantFast)
+gaudi_depends_on_subdirs(GaudiAlg GeantSim/GeantGeneral Sim/SimG4Fast Sim/SimG4Interface)
 
 find_package(Geant4)
 
@@ -12,5 +12,5 @@ gaudi_install_headers(GeantConfig)
 
 gaudi_add_module(GeantConfig
                  src/*.cpp
-                 INCLUDE_DIRS Geant4 GeantGeneral GeantFast
-                 LINK_LIBRARIES GaudiAlgLib Geant4 GeantFast GeantGeneral)
+                 INCLUDE_DIRS Geant4 GeantGeneral SimG4Fast SimG4Interface
+                 LINK_LIBRARIES GaudiAlgLib Geant4 SimG4Fast GeantGeneral)
