--- a/Sim/SimG4Fast/CMakeLists.txt
+++ b/Sim/SimG4Fast/CMakeLists.txt
@@ -1,18 +1,19 @@
 ################################################################################
-# Package: GeantFast
+# Package: SimG4Fast
 ################################################################################
-gaudi_subdir(GeantFast v1r0)
+gaudi_subdir(SimG4Fast v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg DataObjects GeantSim/GeantComponents GeantSim/GeantGeneral)
+gaudi_depends_on_subdirs(GaudiAlg DataObjects Sim/SimG4Components GeantSim/GeantGeneral)
 
 find_package(Geant4)
+include(${Geant4_USE_FILE})
 find_package(ROOT)
 
-gaudi_install_headers(GeantFast)
+gaudi_install_headers(SimG4Fast)
 
-gaudi_add_library(GeantFast
+gaudi_add_library(SimG4Fast
                  src/*.cpp
-                 INCLUDE_DIRS GeantFast GeantGeneral FWCore GeantComponents Geant4 ROOT
+                 INCLUDE_DIRS GeantFast GeantGeneral FWCore SimG4Components Geant4 ROOT
                  LINK_LIBRARIES GaudiAlgLib DataObjects GeantGeneral Geant4 ROOT
-                 PUBLIC_HEADERS GeantFast)
+                 PUBLIC_HEADERS SimG4Fast)
