Using intrinsic DD4hep sensitive detectors, hits stored in EDM

--- a/DetectorDescription/Detectors/CMakeLists.txt
+++ b/DetectorDescription/Detectors/CMakeLists.txt
@@ -5,23 +5,22 @@ gaudi_subdir(Detectors v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
 			 DataObjects
-			 DetectorDescription/DetExtensions
-          Sim/SimG4Full)
+			 DetectorDescription/DetExtensions)
 
 
-find_package(DD4hep COMPONENTS DDG4)
+find_package(DD4hep)
 find_package(Geant4)
 include(${Geant4_USE_FILE})
 
-set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake ) 
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
 include( DD4hep )
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 gaudi_add_module(Detectors
-		  src/*.cxx src/*.cpp
-		  INCLUDE_DIRS  DD4hep ROOT DetExtensions Geant4 SimG4Full
-		  LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 SimG4Full)
+		  src/*.cxx
+		  INCLUDE_DIRS  DD4hep ROOT DetExtensions Geant4
+		  LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
