--- a/Reconstruction/CMakeLists.txt
+++ b/Reconstruction/CMakeLists.txt
@@ -9,11 +9,11 @@ gaudi_depends_on_subdirs(GaudiAlg DataObjects FWCore)
 find_package(FastJet)
 find_package(ROOT COMPONENTS Physics)
 find_package(FCCEDM)
-find_package(ALBERS)
+find_package(PODIO)
 find_package(HepMC)
 
 gaudi_add_module(Reconstruction
                  src/*.cpp
-                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM ALBERS
-                 LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM ALBERS DataObjects)
+                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO
+                 LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO DataObjects)
 
