--- a/Test/TestGeant/CMakeLists.txt
+++ b/Test/TestGeant/CMakeLists.txt
@@ -8,11 +8,11 @@ gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore DataObjects)
 
 find_package(ROOT)
 find_package(Geant4)
-find_package(ALBERS)
+find_package(PODIO)
 find_package(FCCEDM)
 
 gaudi_add_module(TestGeant
 		 src/*.cpp
-		 INCLUDE_DIRS ROOT FWCore GaudiKernel Geant4 DataObjects FCCEDM ALBERS
-       LINK_LIBRARIES GaudiAlgLib FWCore DataObjects ROOT GaudiKernel Geant4 FCCEDM ALBERS)
+		 INCLUDE_DIRS ROOT FWCore GaudiKernel Geant4 DataObjects FCCEDM PODIO
+       LINK_LIBRARIES GaudiAlgLib FWCore DataObjects ROOT GaudiKernel Geant4 FCCEDM PODIO)
 
