--- a/DetectorDescription/DetDesServices/CMakeLists.txt
+++ b/DetectorDescription/DetDesServices/CMakeLists.txt
@@ -4,19 +4,14 @@
 gaudi_subdir(DetDesServices v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
-			 RecoGeometry
-			 DetectorDescription/DetDesInterfaces
-			 DetectorDescription/DetExtensions)
-
-find_package(ROOT COMPONENTS MathCore GenVector Geom)
-
-find_package(DD4hep COMPONENTS DDG4)
+			 DetectorDescription/DetDesInterfaces)
 
 find_package(Geant4)
+find_package(DD4hep)
 
 gaudi_install_headers(DetDesServices)
 
 gaudi_add_module(DetDesServices
 		 src/*.cxx
-		 INCLUDE_DIRS GaudiKernel ROOT DD4hep Geant4 RecoGeometry  DetDesInterfaces DetExtensions
-		 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_DDG4_LIBRARY} Geant4 RecoGeometry)
+		 INCLUDE_DIRS GaudiKernel Geant4 DD4hep DetDesInterfaces DetExtensions
+		 LINK_LIBRARIES GaudiKernel DD4hep ${DD4hep_DDG4_LIBRARY} Geant4)
