--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,11 +4,11 @@
 gaudi_subdir(Examples v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg DataObjects FWCore)
+gaudi_depends_on_subdirs(GaudiAlg FWCore)
 
 gaudi_add_module(Examples
                  src/*.cpp
-                 LINK_LIBRARIES GaudiAlgLib DataObjects FWCore)
+                 LINK_LIBRARIES GaudiAlgLib FWCore)
 
 
 include(CTest)
