--- a/Test/TestDD4hep/CMakeLists.txt
+++ b/Test/TestDD4hep/CMakeLists.txt
@@ -4,19 +4,19 @@
 gaudi_subdir(TestDD4hep v1r0)
 
 #this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel Sim/SimG4Interface)
+gaudi_depends_on_subdirs(GaudiAlg GaudiKernel Sim/SimG4Interface DetectorDescription/DetDesInterfaces)
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom)
 find_package(DD4hep COMPONENTS DDG4)
+include(DD4hep)
 find_package(Geant4)
 
 gaudi_add_module(TestDD4hep
 		 src/*.cpp
-		 INCLUDE_DIRS ROOT GaudiKernel Geant4 DD4hep SimG4Interface
+		 INCLUDE_DIRS ROOT GaudiKernel Geant4 DD4hep SimG4Interface DetDesInterfaces
        LINK_LIBRARIES GaudiAlgLib ROOT GaudiKernel DD4hep Geant4)
 
 set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
-include( DD4hep )
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
