All files regarding SDs moved to DetSensitive

--- a/DetectorDescription/DetSensitive/CMakeLists.txt
+++ b/DetectorDescription/DetSensitive/CMakeLists.txt
@@ -3,13 +3,22 @@
 ################################################################################
 gaudi_subdir(DetSensitive v1r0)
 
+gaudi_depends_on_subdirs(GaudiKernel)
+
+find_package(DD4hep)
 find_package(Geant4)
 include(${Geant4_USE_FILE})
-find_package(DD4hep)
-find_package(ROOT REQUIRED COMPONENTS Geom)
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
+include(DD4hep)
+
+find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 gaudi_add_library(DetSensitive
 		  src/*.cpp
 		  INCLUDE_DIRS Geant4 DD4hep ROOT
-		  LINK_LIBRARIES Geant4 DD4hep ROOT
-        PUBLIC_HEADERS DetSensitive)
+		  LINK_LIBRARIES GaudiKernel Geant4 DD4hep ROOT)
+
+
+set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
+dd4hep_generate_rootmap(DetSensitive)
