--- a/DetectorDescription/Detectors/CMakeLists.txt
+++ b/DetectorDescription/Detectors/CMakeLists.txt
@@ -4,8 +4,7 @@
 gaudi_subdir(Detectors v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
-                        DetectorDescription/DetExtensions
-                        DetectorDescription/DetSensitive)
+                        DetectorDescription/DetExtensions)
 
 
 find_package(DD4hep)
@@ -19,8 +18,8 @@ find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 gaudi_add_module(Detectors
 		  src/*.cxx
-		  INCLUDE_DIRS DD4hep ROOT DetExtensions Geant4 DetSensitive
-		  LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 DetSensitive)
+		  INCLUDE_DIRS DD4hep ROOT DetExtensions Geant4
+		  LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
