--- a/DetectorDescription/DetDesServices/CMakeLists.txt
+++ b/DetectorDescription/DetDesServices/CMakeLists.txt
@@ -17,6 +17,6 @@ find_package(Geant4)
 gaudi_install_headers(DetDesServices)
 
 gaudi_add_module(DetDesServices
-		 src/*.cxx
+		 src/*.cpp
 		 INCLUDE_DIRS GaudiKernel ROOT DD4hep Geant4 RecoGeometry  DetDesInterfaces DetExtensions
 		 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_DDG4_LIBRARY} Geant4 RecoGeometry)
