--- a/DetectorDescription/DetSensitive/CMakeLists.txt
+++ b/DetectorDescription/DetSensitive/CMakeLists.txt
@@ -20,5 +20,36 @@ gaudi_add_library(DetSensitive
 		  LINK_LIBRARIES GaudiKernel Geant4 DD4hep ROOT ${DD4hep_COMPONENT_LIBRARIES}
         PUBLIC_HEADERS SimG4Common)
 
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
+
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 dd4hep_generate_rootmap(DetSensitive)
+
+include(CTest)
+gaudi_add_test(InternalTrackerSD
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               FRAMEWORK tests/options/testDd4hepTrackerSD.py)
+gaudi_add_test(ExternalTrackerSD
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               FRAMEWORK tests/options/testSimpleTrackerSD.py)
+gaudi_add_test(CmpTrackerSDNoHits
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               COMMAND python ./scripts/cmpTrackerSdNoHits.py
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               DEPENDS InternalTrackerSD ExternalTrackerSD)
+gaudi_add_test(CmpTrackerSDDetailed
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               COMMAND python ./scripts/cmpTrackerSdDetailed.py
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               DEPENDS InternalTrackerSD ExternalTrackerSD)
+gaudi_add_test(CmpTrackerSDHitsAndClusters
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               COMMAND python ./scripts/cmpTrackerSdHitsAndClusters.py
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               DEPENDS InternalTrackerSD ExternalTrackerSD)
+gaudi_add_test(InternalCalorimeterSD
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               FRAMEWORK tests/options/testDd4hepCaloSD.py)
+gaudi_add_test(ExternalCalorimeterSD
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/DetectorDescription/DetSensitive/tests/
+               FRAMEWORK tests/options/testSimpleCaloSD.py)
