Renaming Sim everywhere

--- a/Simulation/SimG4Components/CMakeLists.txt
+++ b/Simulation/SimG4Components/CMakeLists.txt
@@ -4,7 +4,7 @@
 gaudi_subdir(SimG4Components v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg FWCore Sim/SimG4Common Detector/DetInterface Sim/SimG4Interface)
+gaudi_depends_on_subdirs(GaudiAlg FWCore Simulation/SimG4Common Detector/DetInterface Simulation/SimG4Interface)
 
 find_package(Geant4)
 include(${Geant4_USE_FILE})
@@ -30,27 +30,27 @@ gaudi_add_test(GeantFullSimGdml
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/geant_fullsim_gdml.py)
 gaudi_add_test(GeantFullSimMoreEvents
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                FRAMEWORK tests/options/geant_fullsim_moreEvents.py)
 gaudi_add_test(GeantFullSimMoreEventsCheckNoEvents
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                COMMAND python ./scripts/geant_fullsim_moreEvents_checkNoEvents.py
                DEPENDS GeantFullSimMoreEvents)
 gaudi_add_test(GeantFullSimMoreEventsCheckNoParticles
                ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                COMMAND python ./scripts/geant_fullsim_moreEvents_checkNoParticles.py
                DEPENDS GeantFullSimMoreEvents)
 gaudi_add_test(GeantFastSimSimpleSmearing
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                FRAMEWORK tests/options/geant_fastsim_simple.py)
 gaudi_add_test(GeantFastSimSimpleSmearingCheckSigma
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                COMMAND python ./scripts/geant_fastsim_simple_checkSigma.py
                DEPENDS GeantFastSimSimpleSmearing)
 gaudi_add_test(GeantFastSimSimpleSmearingCheckNoParticles
                ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Sim/SimG4Components/tests/
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Simulation/SimG4Components/tests/
                COMMAND python ./scripts/geant_fastsim_checkNoParticles.py
                DEPENDS GeantFastSimSimpleSmearing)
 
