Adding test cases for DD4hep geometry with segmentation and with physical volumes as cells

--- a/Test/TestGeometry/CMakeLists.txt
+++ b/Test/TestGeometry/CMakeLists.txt
@@ -28,3 +28,19 @@ include(CTest)
 gaudi_add_test(TestCellIDFromGdml
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
                FRAMEWORK tests/options/geant_testcellid_gdml.py)
+gaudi_add_test(TestCellIDFromDd4hepSegmentation
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
+               FRAMEWORK tests/options/geant_testcellid_dd4hep_segmentation.py)
+gaudi_add_test(TestCellIDFromDd4hepVolumes
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
+               FRAMEWORK tests/options/geant_testcellid_dd4hep_volumes.py)
+gaudi_add_test(CmpCellIDGdmlDd4hep
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
+               COMMAND python ./scripts/cmpCellId.py
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               DEPENDS TestCellIDFromDd4hepSegmentation TestCellIDFromGdml)
+gaudi_add_test(CmpCellIDDd4hepSegmentationVolumes
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
+               COMMAND python ./scripts/cmpCellIdDd4hep.py
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               DEPENDS TestCellIDFromDd4hepSegmentation TestCellIDFromDd4hepVolumes)
