Add test for reader.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -40,6 +40,9 @@ gaudi_add_test(GeantFullSimTrackerHits
 gaudi_add_test(GeantFullSimTrackerHitsWithField
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK options/geant_fullsim_field.py)
+gaudi_add_test(ReadFullSimTrackerHits
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/exampleread.py)
 gaudi_add_test(GeantFullSimWithGeantino
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK options/geant_fullsim_pgun_geantino.py)
