Looking for neighbours of a cell

--- a/Test/TestGeometry/CMakeLists.txt
+++ b/Test/TestGeometry/CMakeLists.txt
@@ -3,7 +3,7 @@
 ################################################################################
 gaudi_subdir(TestGeometry v1r0)
 
-gaudi_depends_on_subdirs(GaudiKernel FWCore Sim/SimG4Interface Sim/SimG4Common)
+gaudi_depends_on_subdirs(GaudiKernel FWCore Sim/SimG4Interface Sim/SimG4Common Detector/DetInterface Detector/DetCommon)
 
 find_package(Geant4)
 include(${Geant4_USE_FILE})
@@ -20,10 +20,9 @@ gaudi_add_library(TestGeometry
 
 gaudi_add_module(TestGeometryPlugins
                  src/components/*.cpp
-                 INCLUDE_DIRS Geant4 FWCore SimG4Interface SimG4Common TestGeometry
-                 LINK_LIBRARIES GaudiKernel FWCore Geant4 TestGeometry)
+                 INCLUDE_DIRS Geant4 FWCore SimG4Interface SimG4Common DetInterface DetCommon TestGeometry
+                 LINK_LIBRARIES GaudiKernel FWCore Geant4 DetCommon TestGeometry)
 
-# set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 dd4hep_generate_rootmap(TestGeometry)
 
