--- a/Detector/DetComponents/CMakeLists.txt
+++ b/Detector/DetComponents/CMakeLists.txt
@@ -5,18 +5,18 @@ gaudi_subdir(DetComponents v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel
                          RecoGeometry
+                         FWCore
                          Detector/DetInterface
+                         Detector/DetSegmentation
                          Detector/DetExtensions)
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom)
 
-find_package(DD4hep COMPONENTS DDG4)
+find_package(DD4hep COMPONENTS DDG4 DDSegmentation REQUIRED)
 
 find_package(Geant4)
 
-gaudi_install_headers(DetComponents)
-
 gaudi_add_module(DetComponents
                  src/*.cpp
-                 INCLUDE_DIRS GaudiKernel ROOT DD4hep Geant4 RecoGeometry  DetInterfaces DetExtensions
-                 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_DDG4_LIBRARY} Geant4 RecoGeometry)
+                 INCLUDE_DIRS GaudiKernel ROOT DD4hep Geant4 RecoGeometry FWCore DetInterface DetExtensions DetSegmentation
+                 LINK_LIBRARIES GaudiKernel ROOT DD4hep ${DD4hep_COMPONENT_LIBRARIES} DetSegmentation Geant4 RecoGeometry FWCore)
