--- a/Visualization/CMakeLists.txt
+++ b/Visualization/CMakeLists.txt
@@ -10,10 +10,9 @@ find_package(FCCEDM)
 find_package(DD4hep COMPONENTS DDCore DDG4 DDEve REQUIRED)
 find_package(PODIO)
 
-gaudi_install_headers(Visualization)
 gaudi_install_python_modules()
 
-gaudi_add_module(Visualization
+gaudi_add_library(Visualization NO_PUBLIC_HEADERS
                  src/*.cpp
                  INCLUDE_DIRS Visualization FWCore FCCEDM PODIO DD4hep 
                  LINK_LIBRARIES  GaudiAlgLib FCCEDM PODIO DD4hep ${DD4hep_LIBRARIES}  ${DD4hep_DDG4_LIBRARY} ${DD4hep_DDEVE_LIBRARY} )
