--- a/Reconstruction/RecCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecCalorimeter/CMakeLists.txt
@@ -1,7 +1,7 @@
 ################################################################################
-# Package: RecCommon
+# Package: RecCalorimeter
 ################################################################################
-gaudi_subdir(RecCommon v1r0)
+gaudi_subdir(RecCalorimeter v1r0)
 
 # this declaration will not be needed in the future
 gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Detector/DetSegmentation Detector/DetCommon Reconstruction/RecInterface)
@@ -14,19 +14,17 @@ find_package(HepMC)
 find_package(DD4hep COMPONENTS DDSegmentation)
 find_package(Geant4)
 
-gaudi_add_library(RecCommon
-                  src/lib/*.cpp
-                  INCLUDE_DIRS DD4hep ROOT
-                  LINK_LIBRARIES GaudiKernel DD4hep ROOT ${DD4hep_COMPONENT_LIBRARIES}
-                  PUBLIC_HEADERS RecCommon)
-
-
-gaudi_add_module(RecCommonPlugins
+gaudi_add_module(RecCalorimeterPlugins
                  src/components/*.cpp
-                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCommon
-                 LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon RecCommon ${DD4hep_COMPONENT_LIBRARIES})
+                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter
+                 LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon ${DD4hep_COMPONENT_LIBRARIES})
 
 include(CTest)
 gaudi_add_test(genJetClustering
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK options/genJetClustering.py)
+
+gaudi_add_test(runEcalReconstruction
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               ENVIRONMENT LD_PRELOAD+=build.$BINARY_TAG/lib/libDetSegmentation.so	
+               FRAMEWORK options/runEcalReconstruction.py)
